# shelf

./: .gitignore  Cargo.toml  README.md  build.rs  resources.txt  src.txt
libs/: libGLX.so.0  libGLdispatch.so.0  libX11-xcb.so.1  libXau.so.6  libXcursor.so.1  libXdamage.so.1  libXdmcp.so.6  libXext.so.6  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libavahi-client.so.3  libavahi-common.so.3  libblkid.so.1  libcairo-gobject.so.2  libcairo-script-interpreter.so.2  libcairo.so.2  libcloudproviders.so.0  libcolord.so.2  libcups.so.2  libdatrie.so.1  libdav1d.so.7  libdbus-1.so.3  libdl.so.2  libdrm.so.2  libepoxy.so.0  libexpat.so.1  libffi.so.7  libfontconfig.so.1  libfreetype.so.6  libfribidi.so.0  libgdk_pixbuf-2.0.so.0  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgnutls.so.30  libgobject-2.0.so.0  libgraphene-1.0.so.0  libgraphite2.so.3  (+48 more)
resources/: resources.xml
resources/ui/: settings_window.xml  window.xml
src/: config.rs  main.rs  pdf.rs  utils.rs
src/ui/: grid_item.rs  mod.rs  models.rs  settings_window.rs  window.rs
